<resources>
    <string name="output_module">输出模块列表</string>
    <string name="app_compile_time">2016.07.12 17:00:00</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_talkback">视频对讲</string>
    <string name="main_bottom_tab1">远程开门</string>
    <string name="main_bottom_tab2">开门记录</string>
    <string name="main_bottom_tab3">监控照片</string>
    <string name="telement_tab1">问题反馈</string>
    <string name="telement_tab2">便民服务</string>
    <string name="telement_tab3">社区超市</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="compile">编辑</string>
    <string name="delete">删除</string>
    <string name="net_abnormal">网络异常</string>
    <string name="data_abnormal">数据异常</string>
    <string name="base_exit">再按一次退出程序</string>
    <string name="fragment_a_textView1">上门服务</string>
    <string name="fragment_a_textView2">社区活动</string>
    <string name="fragment_a_textView3">外卖</string>
    <string name="fragment_a_textView4">家政月嫂</string>
    <string name="fragment_a_textView5">公告：</string>
    <string name="fragment_a_utilities">小区水电</string>
    <string name="fragment_a_cook">大厨上门</string>
    <string name="fragment_a_cook1">精通各种粤菜，湘菜</string>
    <string name="fragment_a_doctor">医生上门</string>
    <string name="fragment_a_doctor1">专业医师，服务优越</string>
    <string name="fragment_a_repair">家电维修</string>
    <string name="fragment_a_repair1">上门维修水电、开关、电视</string>
    <string name="fragment_a_recover">可回收垃圾</string>
    <string name="fragment_a_recover1">上门回收，旧彩电、冰箱、洗衣机等</string>
    <string name="fragment_b_compile">编辑</string>
    <string name="fragment_d_time">时间：</string>
    <string name="fragment_d_date">来访日期：</string>
    <string name="fragment_e_self">个人</string>
    <string name="fragment_e_manager">管理员</string>
    <string name="fragment_e_order">我的订单</string>
    <string name="fragment_e_neighbour">左邻右舍</string>
    <string name="fragment_e_event">小区活动</string>
    <string name="fragment_e_manage">成员管理</string>
    <string name="fragment_e_change">修改密码</string>
    <string name="fragment_e_information">个人信息</string>
    <string name="fragment_e_community">小区</string>
    <string name="fragment_e_room">房间号</string>
    <string name="fragment_e_album">从相册选择</string>
    <string name="fragment_e_camera">相机拍照</string>
    <string name="information_nick">昵称</string>
    <string name="information_name">姓名</string>
    <string name="information_id">身份证号</string>
    <string name="information_null">未填写</string>
    <string name="information_modify">修改</string>
    <string name="information_modify_s">修改成功</string>
    <string name="information_modify_f">修改失败</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="regist_tip1">请选择您的信息</string>
    <string name="regist_tip2">请先选择地区</string>
    <string name="regist_tip3">请先选择社区</string>
    <string name="regist_tip4">请先选择楼栋</string>
    <string name="regist_tip5">请先选择单元</string>
    <string name="regist_regist_s">注册成功</string>
    <string name="regist_data_f">数据获取失败</string>
    <string name="regist_verify_s">验证成功</string>
    <string name="regist_error">手机号码格式错误</string>
    <string name="regist_next">下一步</string>
    <string name="regist_commit">提交</string>
    <string name="regist_phone_hint">请输入您的手机号</string>
    <string name="regist_password_hint">请输入密码</string>
    <string name="regist_name_hint">姓名</string>
    <string name="regist_id_hint">身份证号</string>
    <string name="regist_gender">请选择您的性别</string>
    <string name="regist_gender_man">男</string>
    <string name="regist_gender_woman">女</string>
    <string name="regist_verify_hint">请输入验证码</string>
    <string name="regist_verify_btn">获取验证</string>
    <string name="regist_area">地区:</string>
    <string name="regist_community">小区:</string>
    <string name="regist_build">楼栋:</string>
    <string name="regist_unit">单元:</string>
    <string name="regist_house">房号:</string>
    <string name="login_welcome">欢迎登录</string>
    <string name="login_login">登  录</string>
    <string name="login_phoneNum">请输入您的账号</string>
    <string name="login_password">请输入您的密码</string>
    <string name="login_rigst">快速注册</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_error">账号或密码错误</string>
    <string name="login_error1">手机号码或密码格式错误</string>
    <string name="incoming_hangup">挂断</string>
    <string name="incoming_answer">接听</string>
    <string name="incoming_from">门禁设备呼入</string>
    <string name="calling_loading">视频接通中，请稍候...</string>
    <string name="calling_open">开门</string>
    <string name="calling_hangup">挂断</string>
    <string name="calling_pic">留影</string>
    <string name="calling_handFree">免提模式</string>
    <string name="calling_handSet">听筒模式</string>
    <string name="calling_voice">语音</string>
    <string name="calling_mute">静音</string>
    <string name="calling_machine">门禁设备来电</string>
    <string name="calling_saved">保存成功</string>
    <string name="calling_callerror">设备暂时无法接通。</string>
    <string name="cityselect_select">定位城市</string>
    <string name="cityselect_hot">热门城市</string>
    <string name="cityselect_list">城市列表</string>
    <string name="communityselect_select">定位社区</string>
    <string name="communityselect_hot">热门社区</string>
    <string name="communityselect_list">社区列表</string>
    <string name="usertool_title">设置</string>
    <string name="usertool_DND">免打扰模式</string>
    <string name="usertool_DND_on">打开免打扰模式</string>
    <string name="usertool_DND_off">关闭免打扰模式</string>
    <string name="usertool_CP">SIM卡呼叫手机</string>
    <string name="usertool_AUTO">蓝牙后台开门</string>
    <string name="usertool_CP_on">切换到手机接听</string>
    <string name="usertool_CP_off">切换到应用接听</string>
    <string name="usertool_clear">清除缓存</string>
    <string name="usertool_logout">退出登录</string>
    <string name="usertool_versions">当前版本信息</string>
    <string name="usertool_time">编译时间：</string>
    <string name="usertool_nobuffer">暂无缓存数据</string>
    <string name="changepassword_change">修改密码</string>
    <string name="changepassword_commit">确认修改</string>
    <string name="changepassword_old">请输入旧密码：</string>
    <string name="changepassword_new">请输入新密码：</string>
    <string name="changepassword_again">请再次输入密码：</string>
    <string name="changePassword_pwtips">请输入密码6-12位(由数字、字母组成)</string>
    <string name="changePassword_inconformity">两次密码输入不一致</string>
    <string name="changePassword_changed">修改密码成功</string>
    <string name="repickpassword_repick">忘记密码</string>
    <string name="repickpassword_repick_s">找回密码成功</string>
    <string name="repickpassword_verify_error">验证码格式错误</string>
    <string name="repickpassword_commit">完   成</string>
    <string name="repickpassword_cellphone">请输入手机号码</string>
    <string name="repickpassword_verify">验证码</string>
    <string name="repickpassword_new">请输入新密码</string>
    <string name="repickpassword_again">请再次输入密码</string>
    <string name="member_show">查看成员</string>
    <string name="member_govern">成员管理</string>
    <string name="member_name">申请人： </string>
    <string name="member_phone">申请人手机号： </string>
    <string name="member_id">身份证号： </string>
    <string name="valid_time">成员居住时限： </string>
    <string name="member_request">申请成员</string>
    <string name="member_delete">删除成员 </string>
    <string name="member_agree">同意 </string>
    <string name="member_disagree">拒绝 </string>
    <string name="bufferbar">bufferbar</string>
    <string name="fragment_a_tenement">物业频道</string>
    <string name="fragment_a_tenement_1_1">呼叫安保</string>
    <string name="fragment_a_tenement_1_2">忠诚卫士， 安全守护</string>
    <string name="fragment_a_tenement_2_1">物业报修</string>
    <string name="fragment_a_tenement_2_2">忠诚卫士， 安全守护</string>
    <string name="fragment_a_tenement_3_1">物业投诉</string>
    <string name="fragment_a_tenement_3_2">我们会认真遵从您的意见</string>
    <string name="fragment_a_steward">网格员频道</string>
    <string name="fragment_a_steward_1_1">民生反馈</string>
    <string name="fragment_a_steward_1_2">忠诚卫士， 安全守护</string>
    <string name="fragment_a_steward_2_1">紧急事件</string>
    <string name="fragment_a_steward_2_2">忠诚卫士， 安全守护</string>
    <string name="fragment_a_steward_3_1">联系网格员</string>
    <string name="fragment_a_steward_3_2">我们会认真遵从您的意见</string>
    <string name="fragment_a_steward_4">更多...</string>
    <string name="tenement1_text1">请选择报修类型</string>
    <string name="tenement1_text2">请输入您要报修的内容</string>
    <string name="tenement2_text1">请选择意见类型</string>
    <string name="tenement2_text2">请输入您要投诉的内容</string>
    <string name="steward1_text1">请选择反馈的内容</string>
    <string name="steward1_text2">请输入您要反馈的具体内容</string>
    <string name="steward2_text1">请选择事态类型</string>
    <string name="steward2_text2">请输入您要反馈的事态内容</string>
    <string name="content_too_short">请完善内容描述</string>
    <string name="fragment_a_call">呼叫</string>
    <string name="fragment_a_call1">是否呼叫</string>
    <string name="fragment_a_call2">是否呼叫</string>
    <string name="fragment_a_call3">呼叫保安</string>
    <string name="fragment_a_call4">呼叫网格员</string>
    <string name="fragment_a_inform">请及时缴费请及时缴费请及时缴费请及时缴费请及时缴费</string>
    <string name="fragment_e_tab_1">我的报修</string>
    <string name="fragment_e_tab_2">我的投诉</string>
    <string name="fragment_e_tab_3">我的民生反馈</string>
    <string name="fragment_e_tab_4">我的紧急事态</string>
    <string name="member_accredit">请选择成员类型:</string>
    <string name="member_accredit1">临时住客</string>
    <string name="member_accredit2">家庭成员</string>
    <string name="member_accredit3">出租户</string>
    <string name="member_accredit_time">请选择成员居住时限</string>
    <string name="access_control">门禁机</string>
    <string name="validity_date">有效期</string>
    <string name="ok">确定</string>
    <string name="member_request_time_over">请选择居住到期时限</string>
    <string name="commit_s">提交成功</string>
    <string name="call_tenement">提交成功</string>
    <string name="call_steward">提交成功</string>
    <string name="text_null">（未填写）</string>
    <string name="name_null">姓名不能为空</string>
    <string name="id_null">身份证号不能为空</string>
    <string name="name_short">姓名格式不正确</string>
    <string name="id_short">身份证号格式不正确</string>
    <string name="regist_three_tip">请输入真实姓名和身份证号，以便通过审核.</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_name">name</string>
    <string name="device_address">address</string>
    <string name="not_ble_device">没有找到对应的蓝牙设备</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="success_open">开门成功</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="title_activity_add_pass">AddPassActivity</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="app_name">智能客房</string>
    <string name="input_module">输入模块列表</string>
    <string name="choose">筛选</string>
    <string name="id">控制板名称</string>
    <string name="type">类型</string>
    <string name="room">房间</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="telephone">手机号码</string>
    <string name="verification_code">验证码</string>
    <string name="confirm">确 认</string>
    <string name="add_scene">新增情景</string>
    <string name="scene_name">情景名称:</string>
    <string name="first_parlour_curtain">一楼客厅窗帘</string>
    <string name="text">测试</string>
    <string name="deploy">配置</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登 录</string>
</resources>