<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_gray2"
        android:drawableLeft="@drawable/username"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_40"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:hint="@string/username"
        android:textSize="@dimen/sp_16"
        android:textColorHint="@color/color_C4C6CD"
        />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_gray2"
        android:drawableLeft="@drawable/password"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:hint="@string/password"
        android:textSize="@dimen/sp_16"
        android:textColorHint="@color/color_C4C6CD"
        android:password="true"
        />

    <EditText
        android:id="@+id/register_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_gray2"
        android:drawableLeft="@drawable/confirm"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/sp_16"
        android:textColorHint="@color/color_C4C6CD"
        android:password="true"
        />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_gray2"
        android:drawableLeft="@drawable/cellphone"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:hint="@string/telephone"
        android:textSize="@dimen/sp_16"
        android:textColorHint="@color/color_C4C6CD"
        android:phoneNumber="true"
        />

    <EditText
        android:id="@+id/register_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_gray2"
        android:drawableLeft="@drawable/verificationcode"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:hint="@string/verification_code"
        android:textSize="@dimen/sp_16"
        android:textColorHint="@color/color_C4C6CD"
        android:textColorHighlight="@color/color_FA461C"
        />
    <Button
        android:id="@+id/register_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_blue9"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_25"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:text="@string/confirm"
        android:textSize="@dimen/sp_20"
        android:textColor="@color/color_fff"
        />
</LinearLayout>