<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/tiao"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/parlour_four_tv"
        android:layout_width="@dimen/dp_0"
        android:layout_weight="2.5"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/first_parlour_curtain"
        android:paddingLeft="@dimen/dp_10"
        android:layout_centerVertical="true"
        android:textColor="@color/color_88222223"
        android:textSize="@dimen/sp_18" />
    <Button
        android:id="@+id/parlour_four_text"
        android:layout_width="@dimen/dp_0"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_cha"
        android:textColor="@color/color_fff"
        android:text="@string/text"
        android:textSize="@dimen/sp_18"
        />
    <Button
        android:id="@+id/parlour_four_deploy"
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/dp_0"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:background="@drawable/selector_deploy"
        android:textColor="@color/color_fff"
        android:text="@string/deploy"
        android:textSize="@dimen/sp_18"
        android:paddingLeft="@dimen/dp_1"
        android:clickable="true"
        />
</LinearLayout>