<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_80"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_40"
        android:text="39ffe005484d303433630443"
        android:background="@drawable/rect_gray2"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:textColorHint="@color/color_C4C6CD"
        android:textSize="@dimen/sp_16" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/rect_gray2"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:text="33630443"
        android:paddingBottom="@dimen/dp_5"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:password="true"
        android:textColorHint="@color/color_C4C6CD"
        android:textSize="@dimen/sp_16" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/dp_10"
            android:paddingRight="@dimen/dp_30"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/auto_login"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/login_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@id/login_login"
            android:background="@drawable/selector_btn_check"
            android:button="@null"
            android:paddingTop="@dimen/dp_10" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/rect_blue9"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/login"
        android:textColor="@color/color_fff"
        android:textSize="@dimen/sp_20" />

</LinearLayout>