<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_300"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/color_fff">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/Dialog_title"
                android:layout_width="@dimen/dp_0"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_20"
                android:text="@string/add_scene"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="5dp"
                android:background="@color/color_0095D9"
                android:textColor="@color/color_fff"
                android:textSize="@dimen/sp_20" />
            <TextView
                android:id="@+id/Dialog_help"
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="帮助"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/white1"
                android:background="@drawable/selector_cha"
                android:padding="@dimen/dp_10"
                android:gravity="center"
                android:visibility="gone"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="2"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Dialog_title_name"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:text="@string/scene_name"
                android:textColor="@color/color_88222223"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/scene_et_name"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_5"
                android:layout_weight="2"
                android:textSize="@dimen/sp_16"
                android:background="@drawable/rect_gray2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="2"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/scene_btn_sure"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/selector_network_blue_sure"
                android:text="@string/confirm"
                android:padding="@dimen/dp_10"
                android:textStyle="bold"
                android:textColor="@color/color_fff"
                android:textSize="@dimen/sp_18" />

            <Button
                android:id="@+id/scene_btn_cancel"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/selector_network_blue_cancel"
                android:text="@string/cancel"
                android:padding="@dimen/dp_10"
                android:textStyle="bold"
                android:textColor="@color/color_fff"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
