<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/tiao"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/tiao"
            android:drawableLeft="@drawable/liebiao"
            android:drawablePadding="@dimen/dp_1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_1"
            android:text="@string/output_module"
            android:textColor="@color/color_88222223"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/obtain"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/rect_blue9"
            android:text="获取配置"
            android:textColor="@color/color_fff"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/save"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/rect_blue9"
            android:text="保存配置"
            android:textColor="@color/color_fff"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/delete"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/rect_blue9"
            android:text="删除配置"
            android:textColor="@color/color_fff"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/tiao"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:paddingLeft="@dimen/dp_5"
            android:text="@string/choose"
            android:textColor="@color/color_88222223"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="2.5">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/id"
                android:textColor="@color/color_88222223"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_equipment_id"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1.5"
                android:background="@drawable/rect_blue8"
                android:gravity="center"
                android:textColor="@color/color_fff"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/equipment_id"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/rect_blue5"
                android:src="@drawable/more" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/type"
                android:textColor="@color/color_88222223"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_equipment_lamplight"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1.5"
                android:background="@drawable/rect_blue8"
                android:gravity="center"
                android:textColor="@color/color_fff"
                android:textSize="@dimen/sp_18" />

            <ImageView
                android:id="@+id/equipment_lamplight"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/rect_blue5"
                android:src="@drawable/more" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="2">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/room"
                android:textColor="@color/color_88222223"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_equipment_parlour"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1.5"
                android:background="@drawable/rect_blue8"
                android:gravity="center"
                android:textColor="@color/color_fff"
                android:textSize="@dimen/sp_18" />

            <ImageView
                android:id="@+id/equipment_parlour"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/rect_blue5"
                android:src="@drawable/more" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/equipment_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <cn.etsoft.smarthomephone.weidget.ListViewForScrollView
            android:id="@+id/equipment_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </ScrollView>
</LinearLayout>